--- a/appendix_constants.tex
+++ b/appendix_constants.tex
@@ -4,7 +4,7 @@
 \footnotetext[1]{Die Kristall-Bindungslängen wurden über die Kristallstrukturen aus den Gitterkonstanten berechnet}
 \footnotetext[2]{Die Dichte bei höheren Temperaturen weit unterhalb des Schmelzpunktes wurde über die Dichte bei Raumtemperatur und den linearen Ausdehnungskoeffizienten berechnet}
 
-\begin{table}[H]
+\begin{table}[!h]
   \centering
   \caption{Physikalische Konstanten}
   \oddrowcolors
@@ -20,7 +20,7 @@
   \end{tabularx}
 \end{table}
 
-\begin{table}[H]
+\begin{table}[!h]
   \centering
   \caption{Eigenschaften von Gold}
   \evenrowcolors
@@ -43,7 +43,9 @@
 
 \clearpage
 
-\begin{table}[H]
+\footnotetext[1]{Die Kristall-Bindungslängen wurden über die Kristallstrukturen aus den Gitterkonstanten berechnet}
+
+\begin{table}[!h]
   \centering
   \caption{Eigenschaften von Kupfer}
   \oddrowcolors
@@ -63,7 +65,7 @@
   \end{tabularx}
 \end{table}
 
-\begin{table}[H]
+\begin{table}[!h]
   \centering
   \caption{Eigenschaften von Nickel}
   \evenrowcolors
@@ -78,7 +80,7 @@
   \end{tabularx}
 \end{table}
 
-\begin{table}[H]
+\begin{table}[!h]
   \centering
   \caption{Eigenschaften von Silizium}
   \oddrowcolors
@@ -99,7 +101,7 @@
 
 \end{table}
 
-\begin{table}[H]
+\begin{table}[!h]
   \centering
   \caption{Eigenschaften der Silizium-CVD-Precursormoleküle}
   \evenrowcolors
@@ -115,7 +117,7 @@
 
 \end{table}
 
-\begin{table}[H]
+\begin{table}[!h]
   \centering
   \caption{Eigenschaften von Aluminiumoxid}
   \evenrowcolors
@@ -139,7 +141,7 @@
 
 \end{table}
 
-\begin{table}[H]
+\begin{table}[!h]
   \centering
   \caption{Struktur der \ce{Al2O3}-ALD-Precursormoleküle}
   \evenrowcolors
@@ -154,5 +156,4 @@
     \ce{C-H}-Bindungslänge in TMA                 & \SI{1.113}{\angstrom}  & \cite{haynes_crc_2011} S.9-46 \\
     \hline
   \end{tabularx}
-\todoline{Linearen Ausdehnungskoeffizienten rausnehmen, wenn er nirgends benutzt wird. Am Besten nochmal nachfragen}
 \end{table}
