--- a/appendix_gold.tex
+++ b/appendix_gold.tex
@@ -10,7 +10,7 @@ Zum Zeitpunkt der vollständigen Relaxierung liegt die Dicke der abgeschiedenen 
 
 \vspace{3em}
 
-\begin{figure}[H]
+\begin{figure}[!h]
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.49\textwidth}
 
