--- a/appendix_multilayer.tex
+++ b/appendix_multilayer.tex
@@ -9,7 +9,7 @@ Das folgende System wurde bei \SI{500}{\kelvin} mit \SI{5.4}{\electronvolt} Auft
 Die Teilchenenergie liegt mit \SI{5.4}{\electronvolt} vergleichsweise hoch\cite{zhou_atomistic_1998}, wird allerdings vom Thermostat abgedämpft, weshalb die Mobilität des Adatomes verringert und das System unterrelaxiert ist.
 Als Resultat bilden sich Poren (Abbildung~\ref{fig:multilayer_surfacefail}), die sich vergleichbar zu den Kupferkratern in Abbildung~\ref{fig:coppercrater} entwickeln, sich aber erst spät wieder schließen.
 
-\begin{figure}[H]
+\begin{figure}[!h]
   \centering
   \includegraphics[height=10cm]{CuNi_surface8_noalpha}
   \caption{Oberflächenprofil einer CuNi-Oberfläche nach nur 4 Lagen (\SI{60}{\angstrom})}
