--- a/forcefields.tex
+++ b/forcefields.tex
@@ -23,7 +23,7 @@ Weitere Paarpotentiale wie etwa das mit dem Lennard-Jones-Potential verwandte Bu
 Allen Paar-Potentialen ist gemein, eine rein radiale Abhängigkeit $V(r_{ij})$ zu besitzen, die oftmals einen charakteristischen Bindungsabstand in Abhängigkeit der Parameter bildet, welcher sich als Minimum in den Potentialen äußert.
 Unterhalb dieses Radius' dominiert ein repulsiver Term, wo hingegen oberhalb davon ein leicht attraktiver Term vorherrscht, der sich für große Radien Null annähert und deshalb mit einem Cutoff-Radius $r_\text{cut}$ versehen ist.
 
-\begin{figure}[btp]
+\begin{figure}[b]
   \centering
   \includegraphics[width=0.5\textwidth]{mdpotplot}
   \caption{Auswahl einfacher molekulardynamischer Paarpotentiale}
@@ -113,6 +113,6 @@ Die einzige Abhängigkeit besteht zum Trainingssatz, also den Test-Strukturen, a
 So kann die Parametrisierung in der Regel nur die Strukturen und Materialien zuverlässig wiedergeben, für die sie ursprünglich erstellt wurde.
 Für erweiterte Anwendungen ist in der Regel eine aufwendige Anpassung der Parametersätze mittels geeigneter Trainingsstrukturen erforderlich.
 
-In den letzten fünf Jahren haben reaktive Kraftfelder jedoch an Aufmerksamkeit gewonnen, so dass die Zahl verfügbarer spezialisierter Parametrisierungen stetig zunimmt.
+In den letzten fünf Jahren haben reaktive Kraftfelder jedoch an Aufmerksamkeit gewonnen, sodass die Zahl verfügbarer spezialisierter Parametrisierungen stetig zunimmt.
 Es gibt auch Bestrebungen, sich ergänzende ReaxFF-Parametrisierungen zu kombinieren und somit mit einer Parametrisierung eine große Zahl von Zielsystemen betrachten zu können.
 Besonders in kommerzieller MD-Software\cite{biovia_materials_2014} wird so versucht, dem Nutzer ein umfassendes Paket für die Simulation beliebiger Strukturen zu präsentieren, ohne ihm aber die Grenzen der Vorhersagekraft des Parametersatzes erkenntlich zu machen.
