--- a/literature.bib
+++ b/literature.bib
@@ -99,6 +99,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 @article{ylilammi_monolayer_1996,
 	title = {Monolayer thickness in atomic layer deposition},
 	volume = {279},
+	url = {http://dx.doi.org/10.1016/0040-6090(95)08159-3},
 	doi = {10.1016/0040-6090(95)08159-3},
 	number = {1-2},
 	journal = {Thin Solid Films},
@@ -126,6 +127,8 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 @article{gosalvez_atomistic_2008,
 	title = {Atomistic methods for the simulation of evolving surfaces},
 	volume = {18},
+	url = {http://iopscience.iop.org/0960-1317/18/5/055029},
+	doi = {10.1088/0960-1317/18/5/055029},
 	journal = {Journal of Micromechanics and Microengineering},
 	author = {Gosálvez, M. A. and Xing, Y. and Sato, K. and Nieminen, R. M.},
 	year = {2008},
@@ -136,6 +139,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 @phdthesis{dwivedi_multiscale_2010,
 	address = {Maryland, {USA}},
 	title = {A multiscale Model for an atomic layer deposition process},
+	url = {http://hdl.handle.net/1903/10354},
 	school = {University of Maryland},
 	author = {Dwivedi, Vivek Hari},
 	year = {2010},
@@ -443,6 +447,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	title = {Thermal expansion of c-Si via ab initio molecular dynamics},
 	volume = {41},
 	url = {http://prb.aps.org/abstract/PRB/v41/i3/p1680_1},
+	doi = {10.1103/PhysRevB.41.1680},
 	number = {3},
 	urldate = {2013-11-13},
 	journal = {Physical Review B},
@@ -1629,7 +1634,7 @@ The {MD} program can handle rectangular periodic boundary conditions with temper
 }
 
 @misc{thompson_lammps_2013,
-	title = {{LAMMPS} Source Code Repository: Removal of Al\_Al0\_AlN {ReaxFF} file},
+	title = {{LAMMPS} Source Repository: Removal of Al\_Al0\_AlN {ReaxFF} file},
 	url = {https://github.com/lammps/lammps/commit/471694a7e7be1a5d9b88fecc8ad027ee8d5b9c6d},
 	journal = {lammps/lammps - {GitHub}},
 	author = {Thompson, Aidan},
@@ -2032,4 +2037,20 @@ Another {MTJ} element structure may comprise a pinned layer, a fixed layer and a
 	keywords = {Aluminium oxide, gas earing, solar cells, spatial atomic layer deposition, surface passivation},
 	pages = {3564--3567},
 	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/QDMWX4AV/Poodt et al. - 2010 - High-Speed Spatial Atomic-Layer Deposition of Alum.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/TASG5IAI/abstract.html:text/html}
+}
+
+@article{brosilow_random_1991,
+	title = {Random sequential adsorption of parallel squares},
+	volume = {43},
+	url = {http://link.aps.org/doi/10.1103/PhysRevA.43.631},
+	doi = {10.1103/PhysRevA.43.631},
+	abstract = {The random sequential adsorption of parallel (aligned) squares is studied by computer simulation. A new precise value of the maximum (jamming) coverage is found: θJ=0.562 009±0.000 004. The dynamics for times t≳6000 agree with Swendsen’s prediction θJ-θ(t)∼c(lnt)/t. Various two-point correlation functions are measured, and the effects of the finite size and the discretization of the adsorbing surface are also investigated.},
+	number = {2},
+	urldate = {2014-11-25},
+	journal = {Physical Review A},
+	author = {Brosilow, Benjamin J. and Ziff, Robert M. and Vigil, R. Dennis},
+	month = jan,
+	year = {1991},
+	pages = {631--638},
+	file = {APS Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/CG3RDKXS/PhysRevA.43.html:text/html;Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/B5RZ5SWD/Brosilow et al. - 1991 - Random sequential adsorption of parallel squares.pdf:application/pdf}
 }
