--- a/present.tex
+++ b/present.tex
@@ -95,4 +95,4 @@ Die Untersuchungen von Gasphasenabscheidungsprozessen mittels Molekulardynamik b
 Wenige Untersuchungen simulieren deshalb mehr als \num{50000} Atome, weshalb sich besonders bei der Bestimmung struktureller Eigenschaften Finite Size-Effekte bemerkbar machen können.
 Darüber hinaus werden einige der genutzten Potentialparametrisierungen nicht veröffentlicht, wodurch die entsprechenden Ergebnisse nicht reproduzierbar oder auf andere Probleme übertragbar sind.
 Dem steht die Vielzahl von verschiedenen Parametrisierungen gegenüber, von denen jede einzelne nur auf ein spezielles Problem anwendbar ist.
-Eine Suche nach EAM-Kraftfeldern für Kupferatome in der Potentialdatenbank des NIST\cite{becker_interatomic_2014} ergibt beispielsweise eine zweistellige Zahl an Kupfer-Parametrisierungen, die einzeln hinsichtlich eigener Problemstellungen überprüft werden müssen (Abschnitt~\ref{copperpvd}).
+Eine Suche nach EAM-Kraftfeldern für Kupferatome in der Potentialdatenbank des \textsc{NIST}\cite{becker_interatomic_2014} ergibt beispielsweise eine zweistellige Zahl an Kupfer-Parametrisierungen, die einzeln hinsichtlich eigener Problemstellungen überprüft werden müssen (Abschnitt~\ref{copperpvd}).
