--- a/intro.tex
+++ b/intro.tex
@@ -6,7 +6,7 @@ Gasphasenabscheidungen werden zur Herstellung konformer, dünner Schichten auf s
 Sie sind beispielsweise für die Produktion dünner Dielektrika\cite{gordon_vapor_2001}, Interconnects\cite{waechtler_copper_2009} und Diffusionsbarrieren\cite{granneman_thin_1993,raaijmakers_low_1994} interessant, für die besonders präzise Abscheidungsmethoden notwendig sind.
 %% {weitere Anwendungen von Gasphasenabscheidung}
 Gasphasenabscheidungen werden auch für eine Vielzahl anderer Anwendungen verwendet, wie beispielsweise für die Produktion von passivierenden und protektiven Beschichtungen\cite{yun_passivation_2004,poodt_high-speed_2010,higashiwaki_algan/gan_2006}.
-Weiterhin erlauben sie die Herstellung mehrlagiger Materialien mit besonderen mechanischen (erhöhte Festigkeit)\cite{cammarata_nanoindentation_1990}, magnetischen (Riesenmagnetowiderstand\cite{peter_influence_2007,seyama_giant_1999,bird_giant_1995}, magnetischer Tunnelwiderstand\cite{sun_magnetic_2006}) und optischen (Röntgenspiegel\cite{jankowski_subnanometer_1989}) Eigenschaften.
+Weiterhin erlauben sie die Herstellung mehrlagiger Materialien mit besonderen mechanischen (erhöhte Festigkeit\cite{cammarata_nanoindentation_1990}), magnetischen (Riesenmagnetowiderstand\cite{peter_influence_2007,seyama_giant_1999,bird_giant_1995}, magnetischer Tunnelwiderstand\cite{sun_magnetic_2006}) und optischen Eigenschaften (Röntgenspiegel\cite{jankowski_subnanometer_1989}).
 Doch auch größere Oberflächen werden per Gasphasenabscheidung mit Dünnschichten versehen, etwa zur Erhöhung der Witterungs- und Wärmebeständigkeit von Oberflächen\cite{mccurdy_successful_1999}.
 
 %% {Kandidat zur Lösung von Herausforderungen}
@@ -15,7 +15,7 @@ Mit der Physikalischen Gasphasenabscheidung (PVD, Physical Vapor Deposition), de
 
 %% {Mein Gebiet}
 Atomistische Simulationen können helfen, unter verschiedenen Bedingungen die strukturellen Eigenschaften der abgeschiedenen Schicht zu beschreiben, anhand derer auch Rückschlüsse auf elektronische\cite{aspnes_optical_1982,steudel_influence_2004} oder mechanische Eigenschaften\cite{chasiotis_mechanical_2003,cammarata_nanoindentation_1990} gezogen werden können.
-Dafür ist eine Modellierung chemischer Reaktionen und amorpher Strukturen ebenso notwendig wie die Beschreibung von Simulationsräumen auf der Größenordnung kompletter Nano-Bauelemente, um ebenfalls Aussagen über das Wachstum auf strukturierten und \todo{was meine ich mit gemischten Substraten?}polykristallinen Substraten treffen zu können.
+Dafür ist eine Modellierung chemischer Reaktionen und amorpher Strukturen ebenso notwendig wie die Beschreibung von Simulationsräumen auf der Größenordnung kompletter Nano-Bauelemente, um ebenfalls Aussagen über das Wachstum auf strukturierten, polykristallinen oder heterogenen Substraten treffen zu können.
 Zur Simulation von Abscheidungen auf kompletten Nano-Bauelementen sind große Simulationsräume im Bereich von \SI{200x200}{\nano\meter} mit bis zu \num{1e9} Atomen notwendig, die mit rein atomistischen Simulationen bisher aufgrund des hohen Rechenaufwandes nicht möglich sind\cite{plimpton_computational_1995}.
 % oder keine strukturellen Aussagen ermöglichen.
 
@@ -29,23 +29,23 @@ Eine mögliche Lösung dieser Probleme stellt eine Kombination der beiden Method
 %% {Anknüpfungspunkte und Fokus der Arbeit}
 
 Das Ziel der vorliegenden Arbeit ist, ein bestehendes Multiskalen-Modell zur Simulation von Atomlagenabscheidungen per KMC und MD auf allgemeine Gasphasenabscheidungen zu erweitern und die Simulation von Gasphasenabscheidungen, insbesondere der physikalischen Gasphasenabscheidung, damit zu realisieren.
-Dabei soll auch die Präparation neuer Abscheidungsprozesse sowie die Möglichkeit, die Oberflächen-Reaktionen bei chemischen Gasphasenabscheidungen durch reaktive Kraftfelder molekulardynamisch zu beschreiben, untersucht werden.
-Die vorliegende Implementierung dieses Modelles soll dafür außerdem zugunsten der schnellen Prozesspräparation um Konfigurationsdateien, zentrale Datenbanken der Substrate und Prozesskonfigurationen sowie um eine einfache Kontrolle der Prozessparallelisierung ergänzt werden.
+Dabei soll auch die Präparation neuer Abscheidungsprozesse sowie die Möglichkeit untersucht werden, die Oberflächen-Reaktionen bei chemischen Gasphasenabscheidungen durch reaktive Kraftfelder molekulardynamisch zu beschreiben.
+Außerdem soll vorliegende Implementierung dieses Modelles zugunsten der schnellen Prozesspräparation um Konfigurationsdateien, zentrale Datenbanken der Substrate und Prozesskonfigurationen sowie um eine einfachere Kontrolle der Prozessparallelisierung ergänzt werden.
 
 %% {Struktur der Arbeit}
 \subsubsection{Struktur der Arbeit}
 
 Im Anschluss an diese Einleitung wird zuerst in Kapitel~\ref{theory} ein Überblick über die Arten und Funktionsweisen von Gasphasenabscheidungen, sowie die Simulationsmethoden der Molekulardynamik und Kinetischen Monte Carlo-Methoden gegeben.
 
-Danach stellt Kapitel~\ref{models} den aktuellen Stand der Simulationen von Gasphasenabscheidungen mit KMC und MD vor, präsentiert die Erweiterungen des kombinierten KMC/MD-Modells und gibt einen Überblick über allgemeine molekulardynamische Methoden zur Präparation von Prozessen und Substraten sowie über die Analyse von Ergebnissen.
+Danach stellt Kapitel~\ref{models} den aktuellen Stand der Simulationen von Gasphasenabscheidungen mit KMC und MD vor, präsentiert die Erweiterungen des kombinierten KMC/MD-Modells sowie eine Laufzeitanalyse dieses Modells und gibt einen Überblick über allgemeine molekulardynamische Methoden zur Präparation von Prozessen und Substraten sowie über die Analyse von Ergebnissen.
 
-Der Hauptteil der Arbeit beschäftigt sich danach in Kapitel~\ref{results} mit den Ergebnissen der Simulation von Gasphasenabscheidungen und den notwendigen Voruntersuchungen der molekulardynamischen Potentialparametrisierungen.
+Der Hauptteil der Arbeit beschäftigt sich in Kapitel~\ref{results} mit den Ergebnissen der Simulation von Gasphasenabscheidungen und den notwendigen Voruntersuchungen der molekulardynamischen Potentialparametrisierungen.
 Dafür wird zuerst eine Gold-PVD-Simulation als Beispielprozess für nichtreaktive Abscheidungen präpariert und damit das Wachstumsverhalten auf strukturierten Substraten sowie die Skalierbarkeit des kombinierten Modelles überprüft.
 Anhand von Kupfer-PVD werden danach Unterschiede zwischen verschiedenen Parametersätzen des selben Kraftfeldes untersucht und die Bildung und Schließung von Oberflächendefekten beobachtet.
 Die Simulation gemischter Systeme wird anhand der Multilagen-Abscheidung durch Kupfer-Nickel-PVD untersucht und die entstandenen Strukturen mit den Ergebnissen einer reinen MD-Simulation verglichen.
 Anschließend wird die Präparation und Abscheidung amorpher Strukturen am Silizium-PVD-System untersucht, wobei auch Betrachtungen der Gasphasen-Reaktionen für Siliziumoxid-CVD durchgeführt werden.
 Zuletzt wird die reaktive Hydroxylierung einer Aluminiumoxid-Oberfläche mit Wassermolekülen simuliert.
 
-Zum Abschluss wird die Arbeit mit Kapitel~\ref{summary} zusammen gefasst, bevor interessante Fragestellungen und Anknüpfungspunkte für künftige Untersuchungen gegeben werden.
+Zum Abschluss wird die Arbeit mit Kapitel~\ref{summary} zusammen gefasst, bevor zukünftige Fragestellungen und Anknüpfungspunkte für weitere Untersuchungen gegeben werden.
 
-Im Anhang der Arbeit sind experimentelle Referenzwerte, weitergehende Informationen zu den verwendeten Datenstrukturen und dem Laufzeitverhalten sowie ergänzende Ergebnisse der simulierten Gasphasenabscheidungen zu finden.
+Im Anhang der Arbeit sind experimentelle Referenzwerte, weitergehende Informationen zu den verwendeten Datenstrukturen und dem Laufzeitverhalten von Parsivald sowie ergänzende Ergebnisse der simulierten Gasphasenabscheidungen zu finden.
