--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -68,14 +68,7 @@ BCOR9mm,
 
 \end{document}
 
-\todoline{Einleitung und Zusammenfassung nochmal lesen}
-\todoline{Mit Vortrag abgleichen}
 \todoline{figures und tables: captions überarbeiten}
-\todoline{Tabellen-Hintergründe überschreiben die horizontalen und vertikalen Linien. Das ist ganz große Kacke}
-\todoline{Das wird Arbeit: Alle Referenzen durchgehen und vergleiche, ob ich sie im richtigen Kontext eingebunden habe!}
-
 \todoline{figures und tables positionieren!}
-\todoline{Erste Absätze: Keine Einrückung.}
-\todoline{Kein Umbruch zwischen Bezeichnungen und inline-Formeln}
-\todoline{Kein Umbruch in Formel-SI-Kombinationen}
-\todoline{Kein Seitenumbruch zwischen Erklärungen und Formeln}
+\todoline{figures und tables: centering?}
+\todoline{Tabellen-Hintergründe überschreiben die horizontalen und vertikalen Linien. Das ist ganz große Kacke}
