--- a/runtime.tex
+++ b/runtime.tex
@@ -11,11 +11,9 @@ Weiterhin bezeichnet die \textit{Größe} des Simulationsraumes oder der MD-Box 
 
 Die Auswahl eines Ereignisses in KMC-Algorithmen ist mit einer Laufzeit~$T_\text{E}$ verbunden, die sich aus der Laufzeit von Suchoperationen $T_\text{KMC}$, der Laufzeit von Serialisierungen und Deserialisierungen zur Datenübertragung zwischen Host und Worker $T_\text{Ser.}$ und $T_\text{Des.}$ sowie der Laufzeit für die Konnektivitätsprüfung $T_\text{Konn.}$ zusammen setzt.
 Damit bezeichnet sie die Zeit, die der Host-Prozess in parallelen Parsivald-Simulationen für ein Ereignis aufbringt.
-
 \begin{equation}
 T_\text{E} = T_\text{KMC} + T_\text{Ser.} + T_\text{Des.} + T_\text{Konn.}
 \end{equation}
-
 Aufgrund des Buffer-Verhaltens der C-Bibliothek sind $T_\text{Ser.}$ und $T_\text{Des.}$ bereits minimal, sodass Ansatzpunkte für Optimierungen nur bei den KMC-Suchoperationen (Abschnitt~\ref{datastructures}) sowie bei der Konnektivitätsprüfung, welche mit \BigO{N^2} zur Zahl der Atome in der MD-Box $N$ am stärksten skaliert, bestehen.
 
 \subsection{Ereignis-Durchsatz \texorpdfstring{$R_\text{E}$}{RE}}
@@ -57,7 +55,7 @@ Damit ist sie von der vernachlässigbaren Laufzeit zur einmaligen Vorbereitung $
 Parsivald-Simulationen werden in einen Host-Prozess und $p-1$ Workerprozesse eingeteilt, woraus sich insgesamt $p$ parallele Prozesse ergeben.
 Die oberen Schranken $p_\text{max}$ liegen dabei in Abhängigkeit der Größe des Simulationsraumes in der maximalen Abdeckung der Oberfläche mit MD-Boxen sowie im Ereignis-Durchsatz des Host-Prozesses.
 
-Für kleine Simulationsräume lässt sich die maximale Anzahl von Ereignissen $p_\text{max,1}-1$ aus der \todo{square percolation aus data/?}dichtesten Packung von nicht-überlappenden, meist quadratischen MD-Boxen der Breite $w_\text{MD}$, Tiefe $d_\text{MD}$ und Fläche $A_\text{MD} = w_\text{MD} \cdot d_\text{MD}$ im Simulationsraum ($w_\text{sim}$, $d_\text{sim}$, $A_\text{sim}$) abschätzen:
+Für kleine Simulationsräume lässt sich die maximale Anzahl von Ereignissen $p_\text{max,1}-1$ aus der \todo{random sequential adsorption limit: \SI{56.2}{\percent}}dichtesten Packung von nicht-überlappenden, meist quadratischen MD-Boxen der Breite $w_\text{MD}$, Tiefe $d_\text{MD}$ und Fläche $A_\text{MD} = w_\text{MD} \cdot d_\text{MD}$ im Simulationsraum ($w_\text{sim}$, $d_\text{sim}$, $A_\text{sim}$) abschätzen:
 \begin{equation}
   p_\text{max,1} = \left\lfloor\frac{w_\text{sim}}{w_\text{MD}}\right\rfloor \cdot \left\lfloor\frac{d_\text{sim}}{d_\text{MD}}\right\rfloor + 1 \approx \left\lfloor\frac{A_\text{sim}}{A_\text{MD}}\right\rfloor + 1
   \label{eq:pmax1}
@@ -159,8 +157,6 @@ Unter Optimierung des Hostprozesses zu $T_\text{E} = \SI{3}{\milli\second}$ sind
   \caption{Einfluss der MD-Laufzeit auf die maximale Workerdichte und das Maximum der Simulationsgröße für effiziente Rechnungen ($\rho_\text{worker} > \SI{10}{\percent}$)}
   \label{fig:densitymaxsize}
 
-  \todoline{grüne Fläche und Text sind weg. Jörg fragen, ob das besser ist.}
-
 \end{figure}
 
 Dieser Einfluss ist auch in Abbildung~\ref{fig:workersbytime} zu erkennen, bei der eine Verschiebung von $w_\text{eff}$ mit einer Verschiebung des Knicks einher geht und somit mehr Prozesse für große Räume zulässt.
@@ -211,3 +207,4 @@ Mit der MD-Zeit steigt also die maximale Zahl der Worker linear, wodurch mehr Er
 Eine theoretische Analyse Laufzeit und Skalierbarkeit von Parsivald zeigt, dass für kleine Simulationsräume konstante parallele Laufzeiten $T_p$ unabhängig von der Größe der Oberfläche ermöglicht werden, wohingegen für große Simulationsräume eine ideale parallele Effizienz $E_\text{max} = 1$ für bis zu $p_\text{max}$ parallele Prozesse möglich ist.
 Die Grenze zwischen diesen Bereichen lässt sich als effiziente Raumgröße $w_\text{eff}$ ermitteln, welche den größten Simulationsraum beschreibt, der in minimaler Laufzeit simuliert werden kann.
 Damit eignet sich Parsivald für effiziente atomistische Simulationen von Abscheidungsprozessen.
+
